--- a/bitnami/metrics-server/templates/metrics-server-serviceaccount.yaml
+++ b/bitnami/metrics-server/templates/metrics-server-serviceaccount.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 {{- end -}}
