--- a/bitnami/metrics-server/templates/metric-server-service.yaml
+++ b/bitnami/metrics-server/templates/metric-server-service.yaml
@@ -5,13 +5,13 @@ metadata:
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 spec:
   ports:
-    - port: 443
+    - port: 8443
       protocol: TCP
-      targetPort: 443
+      targetPort: 8443
   selector:
     app: {{ template "metrics-server.name" . }}
-    release: {{ .Release.Name }}
+    release: {{ .Release.Name | quote }}
