--- a/bitnami/metrics-server/templates/metrics-api-service.yaml
+++ b/bitnami/metrics-server/templates/metrics-api-service.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 spec:
   service:
     name: {{ template "metrics-server.fullname" . }}
