--- a/bitnami/metrics-server/templates/metrics-server-crb.yaml
+++ b/bitnami/metrics-server/templates/metrics-server-crb.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -15,4 +15,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ template "metrics-server.fullname" . }}
+    namespace: {{ .Release.Namespace }}
 {{- end -}}
