--- a/bitnami/metrics-server/templates/role-binding.yaml
+++ b/bitnami/metrics-server/templates/role-binding.yaml
@@ -3,11 +3,12 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: {{ template "metrics-server.fullname" .  }}-auth-reader
+  namespace: kube-system
   labels:
     app: {{ template "metrics-server.name" . }}
     chart: {{ template "metrics-server.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -15,4 +16,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ template "metrics-server.fullname" . }}
+    namespace: {{ .Release.Namespace }}
 {{- end -}}
