Use 'helm upgrade' command to fix already installed charts

--- a/bitnami/external-dns/values.yaml
+++ b/bitnami/external-dns/values.yaml
@@ -1,4 +1,4 @@
-## Bitnami etcd image version
+## Bitnami external-dns image version
 ## ref: https://hub.docker.com/r/bitnami/external-dns/tags/
 ##
 image:
