--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -103,6 +103,7 @@ master:
   ##
   config: |-
     [mysqld]
+    default_authentication_plugin=mysql_native_password
     skip-name-resolve
     explicit_defaults_for_timestamp
     basedir=/opt/bitnami/mysql
@@ -172,6 +173,7 @@ slave:
   ##
   config: |-
     [mysqld]
+    default_authentication_plugin=mysql_native_password
     skip-name-resolve
     explicit_defaults_for_timestamp
     basedir=/opt/bitnami/mysql
