--- a/bitnami/mysql/values-production.yaml
+++ b/bitnami/mysql/values-production.yaml
@@ -102,6 +102,7 @@ master:
   ##
   config: |-
     [mysqld]
+    default_authentication_plugin=mysql_native_password
     skip-name-resolve
     explicit_defaults_for_timestamp
     basedir=/opt/bitnami/mysql
@@ -171,6 +172,7 @@ slave:
   ##
   config: |-
     [mysqld]
+    default_authentication_plugin=mysql_native_password
     skip-name-resolve
     explicit_defaults_for_timestamp
     basedir=/opt/bitnami/mysql
