--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -23,6 +23,14 @@ service:
   type: ClusterIP
   port: 3306
 
+## Pod Security Context
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+##
+securityContext:
+  enabled: true
+  fsGroup: 1001
+  runAsUser: 1001
+
 root:
   ## MySQL admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mysql#setting-the-root-password-on-first-run
