--- a/bitnami/mysql/templates/slave-statefulset.yaml
+++ b/bitnami/mysql/templates/slave-statefulset.yaml
@@ -21,6 +21,11 @@ spec:
         component: "slave"
         release: "{{ .Release.Name }}"
     spec:
+      {{- if .Values.securityContext.enabled }}
+      securityContext:
+        fsGroup: {{ .Values.securityContext.fsGroup }}
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+      {{- end }}
       {{- if eq .Values.slave.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
@@ -77,7 +82,7 @@ spec:
           value: "3306"
         - name: MYSQL_MASTER_USER
           value: "root"
-        - name: MYSQL_MASTER_PASSWORD
+        - name: MYSQL_MASTER_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "fullname" . }}
