--- a/bitnami/mysql/templates/master-statefulset.yaml
+++ b/bitnami/mysql/templates/master-statefulset.yaml
@@ -17,8 +17,10 @@ spec:
     metadata:
       labels:
         app: "{{ template "name" . }}"
+        chart: {{ template "mysql.chart" . }}
         component: "master"
-        release: "{{ .Release.Name }}"
+        release: {{ .Release.Name | quote }}
+        heritage: {{ .Release.Service | quote }}
     spec:
       {{- if .Values.securityContext.enabled }}
       securityContext:
