--- a/bitnami/mysql/templates/master-statefulset.yaml
+++ b/bitnami/mysql/templates/master-statefulset.yaml
@@ -114,6 +114,8 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /bitnami/mysql
+        - name: custom-init-scripts
+          mountPath: /docker-entrypoint-initdb.d
 {{- if .Values.master.config }}
         - name: config
           mountPath: /opt/bitnami/mysql/conf/my.cnf
@@ -154,6 +156,9 @@ spec:
           configMap:
             name: {{ template "master.fullname" . }}
       {{- end }}
+        - name: custom-init-scripts
+          configMap:
+            name: {{ template "master.fullname" . }}-init-scripts
 {{- if .Values.master.persistence.enabled }}
   volumeClaimTemplates:
     - metadata:
