--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -3,8 +3,8 @@
 ##
 image:
   registry: docker.io
-  repository: bitnami/mysql
-  tag: 5.7.22-debian-9
+  repository: tompizmor/mysql
+  tag: 5.7-init
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -42,7 +42,7 @@ root:
   ## Option to force users to specify a password. That is required for 'helm upgrade' to work properly.
   ## If it is not force, a random password will be generated.
   forcePassword: false
-  
+
 db:
   ## MySQL username and password
   ## ref: https://github.com/bitnami/bitnami-docker-mysql#creating-a-database-user-on-first-run
