--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -3,8 +3,8 @@
 ##
 image:
   registry: docker.io
-  repository: tompizmor/mysql
-  tag: 5.7-init
+  repository: bitnami/mysql
+  tag: 5.7.22-debian-9
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
