Add missing release and charts labels in pods

--- a/bitnami/mean/templates/deployment.yaml
+++ b/bitnami/mean/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: {{ template "mean.name" . }}
         release: {{ .Release.Name | quote }}
+        chart: {{ template "mean.chart" . }}
     spec:
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
