--- a/bitnami/memcached/Chart.yaml
+++ b/bitnami/memcached/Chart.yaml
@@ -1,6 +1,6 @@
 name: memcached
 version: 0.4.33
-appVersion: 1.5.9-debian-9
+appVersion: 1.5.9
 description: Chart for Memcached
 keywords:
 - memcached
