--- a/bitnami/tomcat/Chart.yaml
+++ b/bitnami/tomcat/Chart.yaml
@@ -1,6 +1,6 @@
 name: tomcat
 version: 0.4.29
-appVersion: 8.5.32-debian-9
+appVersion: 8.5.32
 description: Chart for Apache Tomcat
 keywords:
 - tomcat
