issue #738: added ability to override configmaps

--- a/bitnami/postgresql/templates/initialization-configmap.yaml
+++ b/bitnami/postgresql/templates/initialization-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if (not .Values.config.customInitConfig) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,3 +10,4 @@ metadata:
     heritage: {{ .Release.Service | quote }}
 data:
 {{ (.Files.Glob "files/docker-entrypoint-initdb.d/*").AsConfig | indent 2 }}
+{{ end }}
