allow setting the overriding configmap names

--- a/bitnami/postgresql/templates/initialization-configmap.yaml
+++ b/bitnami/postgresql/templates/initialization-configmap.yaml
@@ -1,4 +1,4 @@
-{{ if (not .Values.config.customInitConfig) }}
+{{ if (not .Values.config.customInitConfigName) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
