--- a/bitnami/postgresql/templates/statefulset-slaves.yaml
+++ b/bitnami/postgresql/templates/statefulset-slaves.yaml
@@ -111,17 +111,21 @@ spec:
         - name: data
           mountPath: /bitnami/postgresql
         {{ end }}
-        {{ if or (.Files.Glob "files/postgresql.conf") (.Values.config.customConfig) }}
+        {{- if or (.Files.Glob "files/postgresql.conf") (.Values.config.customConfigName) }}
         - name: postgresql-config
           mountPath: /opt/bitnami/postgresql/conf/postgresql.conf
           subPath: postgresql.conf
-        {{ end }}
+        {{- end }}
       volumes:
-      {{ if or (.Files.Glob "files/postgresql.conf") (.Values.config.customConfig) }}
+      {{- if (.Files.Glob "files/postgresql.conf") }}
       - name: postgresql-config
         configMap:
           name: {{ template "postgresql.fullname" . }}-configuration
-      {{ end }}
+      {{- else if .Values.config.customConfigName }}
+      - name: postgresql-config
+        configMap:
+          name: {{ .Values.config.customConfigName }}
+      {{- end }}
 {{- if .Values.persistence.enabled }}
   volumeClaimTemplates:
     - metadata:
