--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -148,7 +148,7 @@ spec:
         - name: KAFKA_LOG_RETENTION_HOURS
           value: {{ .Values.logRetentionHours | quote }}
         - name: KAFKA_MAX_MESSAGE_BYTES
-          value: {{ .Values.maxMessageBytes | quote }}           
+          value: {{ .Values.maxMessageBytes | replace "_" "" | quote }}
         - name: KAFKA_SEGMENT_BYTES
           value: {{ .Values.logSegmentBytes | replace "_" "" | quote }}
         - name: KAFKA_LOGS_DIRS
