[bitnami/kubeapps] sync to 0.2.0
adds basic chart tests

--- a/bitnami/kubeapps/values.yaml
+++ b/bitnami/kubeapps/values.yaml
@@ -177,3 +177,10 @@ affinity: {}
 rbac:
   # Perform creation of RBAC resources
   create: true
+
+testImage:
+  # Image used for the tests. The only requirement is to include curl
+  registry: docker.io
+  repository: bitnami/nginx
+  tag: 1.14.0-r27
+
