--- a/bitnami/kubeapps/templates/apprepository-crd.yaml
+++ b/bitnami/kubeapps/templates/apprepository-crd.yaml
@@ -1,7 +1,12 @@
+{{- if not (.Capabilities.APIVersions.Has "kubeapps.com/v1alpha1") -}}
+# The condition above will be true if another instance of Kubeapps is
+# already installed 
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: apprepositories.kubeapps.com
+  annotations:
+    "helm.sh/resource-policy": keep
   labels:
     app: {{ template "kubeapps.apprepository.fullname" . }}
     chart: {{ template "kubeapps.chart" . }}
@@ -15,3 +20,4 @@ spec:
     shortNames:
     - apprepos
   version: v1alpha1
+{{- end -}}
