kubeapps: bump chart version to v1.0.0-alpha.7

--- a/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
+++ b/bitnami/kubeapps/templates/tiller-proxy-deployment.yaml
@@ -19,6 +19,7 @@ spec:
         app: {{ template "kubeapps.tiller-proxy.fullname" . }}
         release: {{ .Release.Name }}
     spec:
+      serviceAccountName: {{ template "kubeapps.tiller-proxy.fullname" . }}
       containers:
       - name: proxy
         image: {{ template "kubeapps.image" .Values.tillerProxy.image }}
@@ -31,9 +32,6 @@ spec:
         {{- if .Values.tillerProxy.tls.verify }}
         - --tls-verify
         {{- end }}
-        env:
-        - name: HELM_HOME
-          value: /etc/certs
         volumeMounts:
         - name: tiller-certs
           mountPath: /etc/certs
@@ -41,6 +39,15 @@ spec:
         ports:
         - name: http
           containerPort: {{ .Values.chartsvc.service.port }}
+        env:
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        {{- if .Values.tillerProxy.tls }}
+        - name: HELM_HOME
+          value: /etc/certs
+        {{- end }}
         resources:
 {{ toYaml .Values.tillerProxy.resources | indent 12 }}
       {{- if .Values.tillerProxy.tls }}
