--- a/bitnami/nginx-ingress-controller/templates/controller-configmap.yaml
+++ b/bitnami/nginx-ingress-controller/templates/controller-configmap.yaml
@@ -4,15 +4,15 @@ metadata:
   labels:
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "nginx-ingress.controller.fullname" . }}
+  name: {{ template "nginx-ingress.fullname" . }}
 data:
-  enable-vts-status: "{{ .Values.controller.stats.enabled }}"
-{{- if .Values.controller.headers }}
+  enable-vts-status: "{{ .Values.stats.enabled }}"
+{{- if .Values.headers }}
   proxy-set-headers: {{ .Release.Namespace }}/{{ template "nginx-ingress.fullname" . }}-custom-headers
 {{- end }}
-{{- if .Values.controller.config }}
-{{ toYaml .Values.controller.config | indent 2 }}
+{{- if .Values.config }}
+{{ toYaml .Values.config | indent 2 }}
 {{- end }}
