--- a/bitnami/nginx-ingress-controller/templates/controller-daemonset.yaml
+++ b/bitnami/nginx-ingress-controller/templates/controller-daemonset.yaml
@@ -1,66 +1,66 @@
-{{- if eq .Values.controller.kind "DaemonSet" }}
+{{- if eq .Values.kind "DaemonSet" }}
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   labels:
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "nginx-ingress.controller.fullname" . }}
+  name: {{ template "nginx-ingress.fullname" . }}
 spec:
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   updateStrategy:
-{{ toYaml .Values.controller.updateStrategy | indent 4 }}
-  minReadySeconds: {{ .Values.controller.minReadySeconds }}
+{{ toYaml .Values.updateStrategy | indent 4 }}
+  minReadySeconds: {{ .Values.minReadySeconds }}
   template:
     metadata:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/controller-configmap.yaml") . | sha256sum }}
-    {{- if .Values.controller.podAnnotations }}
-{{ toYaml .Values.controller.podAnnotations | indent 8}}
+    {{- if .Values.podAnnotations }}
+{{ toYaml .Values.podAnnotations | indent 8}}
     {{- end }}
       labels:
         app: {{ template "nginx-ingress.name" . }}
-        component: "{{ .Values.controller.name }}"
+        component: "{{ .Values.name }}"
         release: {{ .Release.Name }}
-        {{- if .Values.controller.podLabels }}
-{{ toYaml .Values.controller.podLabels | indent 8}}
+        {{- if .Values.podLabels }}
+{{ toYaml .Values.podLabels | indent 8}}
         {{- end }}
     spec:
-      dnsPolicy: {{ .Values.controller.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
 {{ toYaml .Values.imagePullSecrets | indent 8 }}
       {{- end }}
-{{- if .Values.controller.priorityClassName }}
-      priorityClassName: "{{ .Values.controller.priorityClassName }}"
+{{- if .Values.priorityClassName }}
+      priorityClassName: "{{ .Values.priorityClassName }}"
 {{- end }}
       containers:
-        - name: {{ template "nginx-ingress.name" . }}-{{ .Values.controller.name }}
-          image: "{{ .Values.controller.image.repository }}:{{ .Values.controller.image.tag }}"
-          imagePullPolicy: "{{ .Values.controller.image.pullPolicy }}"
-          {{- if .Values.controller.lifecycle }}
+        - name: {{ template "nginx-ingress.name" . }}-{{ .Values.name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: "{{ .Values.image.pullPolicy }}"
+          {{- if .Values.lifecycle }}
           lifecycle:
-{{ toYaml .Values.controller.lifecycle | indent 12 }}
+{{ toYaml .Values.lifecycle | indent 12 }}
           {{- end }}
           args:
             - /nginx-ingress-controller
-            - --default-backend-service={{ if .Values.defaultBackend.enabled }}{{ .Release.Namespace }}/{{ template "nginx-ingress.defaultBackend.fullname" . }}{{ else }}{{ .Values.controller.defaultBackendService }}{{ end }}
-          {{- if and (semverCompare ">=0.9.0-beta.1" .Values.controller.image.tag) .Values.controller.publishService.enabled }}
-            - --publish-service={{ template "nginx-ingress.controller.publishServicePath" . }}
+            - --default-backend-service={{ if .Values.defaultBackend.enabled }}{{ .Release.Namespace }}/{{ template "nginx-ingress.defaultBackend.fullname" . }}{{ else }}{{ .Values.defaultBackendService }}{{ end }}
+          {{- if and (semverCompare ">=0.9.0-beta.1" .Values.image.tag) .Values.publishService.enabled }}
+            - --publish-service={{ template "nginx-ingress.publishServicePath" . }}
           {{- end }}
-          {{- if (semverCompare ">=0.9.0-beta.1" .Values.controller.image.tag) }}
-            - --election-id={{ .Values.controller.electionID }}
+          {{- if (semverCompare ">=0.9.0-beta.1" .Values.image.tag) }}
+            - --election-id={{ .Values.electionID }}
           {{- end }}
-          {{- if (semverCompare ">=0.9.0-beta.1" .Values.controller.image.tag) }}
-            - --ingress-class={{ .Values.controller.ingressClass }}
+          {{- if (semverCompare ">=0.9.0-beta.1" .Values.image.tag) }}
+            - --ingress-class={{ .Values.ingressClass }}
           {{- end }}
-          {{- if (semverCompare ">=0.9.0-beta.1" .Values.controller.image.tag) }}
-            - --configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.controller.fullname" . }}
+          {{- if (semverCompare ">=0.9.0-beta.1" .Values.image.tag) }}
+            - --configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.fullname" . }}
           {{- else }}
-            - --nginx-configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.controller.fullname" . }}
+            - --nginx-configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.fullname" . }}
           {{- end }}
           {{- if .Values.tcp }}
             - --tcp-services-configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.fullname" . }}-tcp
@@ -68,17 +68,17 @@ spec:
           {{- if .Values.udp }}
             - --udp-services-configmap={{ .Release.Namespace }}/{{ template "nginx-ingress.fullname" . }}-udp
           {{- end }}
-          {{- if .Values.controller.scope.enabled }}
-            - --watch-namespace={{ default .Release.Namespace .Values.controller.scope.namespace }}
+          {{- if .Values.scope.enabled }}
+            - --watch-namespace={{ default .Release.Namespace .Values.scope.namespace }}
           {{- end }}
-          {{- range $key, $value := .Values.controller.extraArgs }}
+          {{- range $key, $value := .Values.extraArgs }}
             {{- if $value }}
             - --{{ $key }}={{ $value }}
             {{- else }}
             - --{{ $key }}
             {{- end }}
           {{- end }}
-          {{- if (semverCompare ">=0.16.0" .Values.controller.image.tag) }}
+          {{- if (semverCompare ">=0.16.0" .Values.image.tag) }}
           securityContext:
             capabilities:
                 drop:
@@ -97,37 +97,37 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          {{- if .Values.controller.extraEnvs }}
-{{ toYaml .Values.controller.extraEnvs | indent 12 }}
+          {{- if .Values.extraEnvs }}
+{{ toYaml .Values.extraEnvs | indent 12 }}
           {{- end }}
           livenessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.controller.livenessProbe.port }}
+              port: {{ .Values.livenessProbe.port }}
               scheme: HTTP
-            initialDelaySeconds: {{ .Values.controller.livenessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.controller.livenessProbe.periodSeconds }}
-            timeoutSeconds: {{ .Values.controller.livenessProbe.timeoutSeconds }}
-            successThreshold: {{ .Values.controller.livenessProbe.successThreshold }}
-            failureThreshold: {{ .Values.controller.livenessProbe.failureThreshold }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.livenessProbe.successThreshold }}
+            failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
-              {{- if .Values.controller.daemonset.useHostPort }}
-              hostPort: {{ .Values.controller.daemonset.hostPorts.http }}
+              {{- if .Values.daemonset.useHostPort }}
+              hostPort: {{ .Values.daemonset.hostPorts.http }}
               {{- end }}
             - name: https
               containerPort: 443
               protocol: TCP
-              {{- if .Values.controller.daemonset.useHostPort }}
-              hostPort: {{ .Values.controller.daemonset.hostPorts.https }}
+              {{- if .Values.daemonset.useHostPort }}
+              hostPort: {{ .Values.daemonset.hostPorts.https }}
               {{- end }}
-          {{- if .Values.controller.stats.enabled }}
+          {{- if .Values.stats.enabled }}
             - name: stats
               containerPort: 18080
               protocol: TCP
-            {{- if .Values.controller.metrics.enabled }}
+            {{- if .Values.metrics.enabled }}
             - name: metrics
               containerPort: 10254
               protocol: TCP
@@ -146,60 +146,60 @@ spec:
           readinessProbe:
             httpGet:
               path: /healthz
-              port: {{ .Values.controller.readinessProbe.port }}
+              port: {{ .Values.readinessProbe.port }}
               scheme: HTTP
-            initialDelaySeconds: {{ .Values.controller.readinessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.controller.readinessProbe.periodSeconds }}
-            timeoutSeconds: {{ .Values.controller.readinessProbe.timeoutSeconds }}
-            successThreshold: {{ .Values.controller.readinessProbe.successThreshold }}
-            failureThreshold: {{ .Values.controller.readinessProbe.failureThreshold }}
-{{- if (or .Values.controller.customTemplate.configMapName .Values.controller.extraVolumeMounts) }}
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+            successThreshold: {{ .Values.readinessProbe.successThreshold }}
+            failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+{{- if (or .Values.customTemplate.configMapName .Values.extraVolumeMounts) }}
           volumeMounts:
 {{- end }}
-{{- if .Values.controller.customTemplate.configMapName }}
+{{- if .Values.customTemplate.configMapName }}
             - mountPath: /etc/nginx/template
               name: nginx-template-volume
               readOnly: true
 {{- end }}
-{{- if .Values.controller.extraVolumeMounts }}
-{{ toYaml .Values.controller.extraVolumeMounts | indent 10}}
+{{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 10}}
 {{- end }}
           resources:
-{{ toYaml .Values.controller.resources | indent 12 }}
-{{- if .Values.controller.extraContainers }}
-{{ toYaml .Values.controller.extraContainers | indent 8}}
+{{ toYaml .Values.resources | indent 12 }}
+{{- if .Values.extraContainers }}
+{{ toYaml .Values.extraContainers | indent 8}}
 {{- end }}
-{{- if .Values.controller.extraInitContainers }}
+{{- if .Values.extraInitContainers }}
       initContainers:
-{{ toYaml .Values.controller.extraInitContainers | indent 8}}
+{{ toYaml .Values.extraInitContainers | indent 8}}
 {{- end }}
-      hostNetwork: {{ .Values.controller.hostNetwork }}
-    {{- if .Values.controller.nodeSelector }}
+      hostNetwork: {{ .Values.hostNetwork }}
+    {{- if .Values.nodeSelector }}
       nodeSelector:
-{{ toYaml .Values.controller.nodeSelector | indent 8 }}
+{{ toYaml .Values.nodeSelector | indent 8 }}
     {{- end }}
-    {{- if .Values.controller.tolerations }}
+    {{- if .Values.tolerations }}
       tolerations:
-{{ toYaml .Values.controller.tolerations | indent 8 }}
+{{ toYaml .Values.tolerations | indent 8 }}
     {{- end }}
-    {{- if .Values.controller.affinity }}
+    {{- if .Values.affinity }}
       affinity:
-{{ toYaml .Values.controller.affinity | indent 8 }}
+{{ toYaml .Values.affinity | indent 8 }}
     {{- end }}
       serviceAccountName: {{ template "nginx-ingress.serviceAccountName" . }}
       terminationGracePeriodSeconds: 60
-{{- if (or .Values.controller.customTemplate.configMapName .Values.controller.extraVolumes) }}
+{{- if (or .Values.customTemplate.configMapName .Values.extraVolumes) }}
       volumes:
 {{- end }}
-{{- if .Values.controller.customTemplate.configMapName }}
+{{- if .Values.customTemplate.configMapName }}
         - name: nginx-template-volume
           configMap:
-            name: {{ .Values.controller.customTemplate.configMapName }}
+            name: {{ .Values.customTemplate.configMapName }}
             items:
-            - key: {{ .Values.controller.customTemplate.configMapKey }}
+            - key: {{ .Values.customTemplate.configMapKey }}
               path: nginx.tmpl
 {{- end }}
-{{- if .Values.controller.extraVolumes }}
-{{ toYaml .Values.controller.extraVolumes | indent 6}}
+{{- if .Values.extraVolumes }}
+{{ toYaml .Values.extraVolumes | indent 6}}
 {{- end }}
 {{- end }}
