--- a/bitnami/nginx-ingress-controller/templates/controller-service.yaml
+++ b/bitnami/nginx-ingress-controller/templates/controller-service.yaml
@@ -1,56 +1,56 @@
 apiVersion: v1
 kind: Service
 metadata:
-{{- if .Values.controller.service.annotations }}
+{{- if .Values.service.annotations }}
   annotations:
-{{ toYaml .Values.controller.service.annotations | indent 4 }}
+{{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
   labels:
-{{- if .Values.controller.service.labels }}
-{{ toYaml .Values.controller.service.labels | indent 4 }}
+{{- if .Values.service.labels }}
+{{ toYaml .Values.service.labels | indent 4 }}
 {{- end }}
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "nginx-ingress.controller.fullname" . }}
+  name: {{ template "nginx-ingress.fullname" . }}
 spec:
-  clusterIP: "{{ .Values.controller.service.clusterIP }}"
-{{- if .Values.controller.service.externalIPs }}
+  clusterIP: "{{ .Values.service.clusterIP }}"
+{{- if .Values.service.externalIPs }}
   externalIPs:
-{{ toYaml .Values.controller.service.externalIPs | indent 4 }}
+{{ toYaml .Values.service.externalIPs | indent 4 }}
 {{- end }}
-{{- if .Values.controller.service.loadBalancerIP }}
-  loadBalancerIP: "{{ .Values.controller.service.loadBalancerIP }}"
+{{- if .Values.service.loadBalancerIP }}
+  loadBalancerIP: "{{ .Values.service.loadBalancerIP }}"
 {{- end }}
-{{- if .Values.controller.service.loadBalancerSourceRanges }}
+{{- if .Values.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges:
-{{ toYaml .Values.controller.service.loadBalancerSourceRanges | indent 4 }}
+{{ toYaml .Values.service.loadBalancerSourceRanges | indent 4 }}
 {{- end }}
-{{- if and (semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion) (.Values.controller.service.externalTrafficPolicy) }}
-  externalTrafficPolicy: "{{ .Values.controller.service.externalTrafficPolicy }}"
+{{- if and (semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion) (.Values.service.externalTrafficPolicy) }}
+  externalTrafficPolicy: "{{ .Values.service.externalTrafficPolicy }}"
 {{- end }}
-{{- if and (semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion) (.Values.controller.service.healthCheckNodePort) }}
-  healthCheckNodePort: {{ .Values.controller.service.healthCheckNodePort }}
+{{- if and (semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion) (.Values.service.healthCheckNodePort) }}
+  healthCheckNodePort: {{ .Values.service.healthCheckNodePort }}
 {{- end }}
   ports:
-    {{- if .Values.controller.service.enableHttp }}
+    {{- if .Values.service.enableHttp }}
     - name: http
       port: 80
       protocol: TCP
-      targetPort: {{ .Values.controller.service.targetPorts.http }}
-      {{- if (and (eq .Values.controller.service.type "NodePort") (not (empty .Values.controller.service.nodePorts.http))) }}
-      nodePort: {{ .Values.controller.service.nodePorts.http }}
+      targetPort: {{ .Values.service.targetPorts.http }}
+      {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.http))) }}
+      nodePort: {{ .Values.service.nodePorts.http }}
       {{- end }}
     {{- end }}
-    {{- if .Values.controller.service.enableHttps }}
+    {{- if .Values.service.enableHttps }}
     - name: https
       port: 443
       protocol: TCP
-      targetPort: {{ .Values.controller.service.targetPorts.https }}
-      {{- if (and (eq .Values.controller.service.type "NodePort") (not (empty .Values.controller.service.nodePorts.https))) }}
-      nodePort: {{ .Values.controller.service.nodePorts.https }}
+      targetPort: {{ .Values.service.targetPorts.https }}
+      {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.https))) }}
+      nodePort: {{ .Values.service.nodePorts.https }}
       {{- end }}
     {{- end }}
   {{- range $key, $value := .Values.tcp }}
@@ -67,6 +67,6 @@ spec:
   {{- end }}
   selector:
     app: {{ template "nginx-ingress.name" . }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     release: {{ .Release.Name }}
-  type: "{{ .Values.controller.service.type }}"
+  type: "{{ .Values.service.type }}"
