--- a/bitnami/nginx-ingress-controller/templates/controller-stats-service.yaml
+++ b/bitnami/nginx-ingress-controller/templates/controller-stats-service.yaml
@@ -1,38 +1,38 @@
-{{- if .Values.controller.stats.enabled }}
+{{- if .Values.stats.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-{{- if .Values.controller.stats.service.annotations }}
+{{- if .Values.stats.service.annotations }}
   annotations:
-{{ toYaml .Values.controller.stats.service.annotations | indent 4 }}
+{{ toYaml .Values.stats.service.annotations | indent 4 }}
 {{- end }}
   labels:
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  name: {{ template "nginx-ingress.controller.fullname" . }}-stats
+  name: {{ template "nginx-ingress.fullname" . }}-stats
 spec:
-  clusterIP: "{{ .Values.controller.stats.service.clusterIP }}"
-{{- if .Values.controller.stats.service.externalIPs }}
+  clusterIP: "{{ .Values.stats.service.clusterIP }}"
+{{- if .Values.stats.service.externalIPs }}
   externalIPs:
-{{ toYaml .Values.controller.stats.service.externalIPs | indent 4 }}
+{{ toYaml .Values.stats.service.externalIPs | indent 4 }}
 {{- end }}
-{{- if .Values.controller.stats.service.loadBalancerIP }}
-  loadBalancerIP: "{{ .Values.controller.stats.service.loadBalancerIP }}"
+{{- if .Values.stats.service.loadBalancerIP }}
+  loadBalancerIP: "{{ .Values.stats.service.loadBalancerIP }}"
 {{- end }}
-{{- if .Values.controller.stats.service.loadBalancerSourceRanges }}
+{{- if .Values.stats.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges:
-{{ toYaml .Values.controller.stats.service.loadBalancerSourceRanges | indent 4 }}
+{{ toYaml .Values.stats.service.loadBalancerSourceRanges | indent 4 }}
 {{- end }}
   ports:
     - name: stats
-      port: {{ .Values.controller.stats.service.servicePort }}
+      port: {{ .Values.stats.service.servicePort }}
       targetPort: stats
   selector:
     app: {{ template "nginx-ingress.name" . }}
-    component: "{{ .Values.controller.name }}"
+    component: "{{ .Values.name }}"
     release: {{ .Release.Name }}
-  type: "{{ .Values.controller.stats.service.type }}"
+  type: "{{ .Values.stats.service.type }}"
 {{- end }}
