[bitnami/metrics-server] Improve Metrics Service Chart

--- a/bitnami/metrics-server/templates/deployment.yaml
+++ b/bitnami/metrics-server/templates/deployment.yaml
@@ -22,9 +22,14 @@ spec:
     spec:
       serviceAccountName: {{ template "metrics-server.serviceAccountName" . }}
       containers:
-        - name: metrics-server
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command:
-            - metrics-server
-            - --source=kubernetes.summary_api:''
+      - name: metrics-server
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        ports:
+        - name: https
+          containerPort: {{ .Values.securePort }}
+        command:
+        - metrics-server
+        - --source=kubernetes.summary_api:''
+        - --secure-port={{ .Values.securePort }}
+        
