--- a/bitnami/metrics-server/values.yaml
+++ b/bitnami/metrics-server/values.yaml
@@ -29,3 +29,21 @@ apiService:
   # manage it outside of this chart for e.g horizontal pod autoscaling to
   # work with this release.
   create: true
+
+## Specify the secure port where metrics-server will be running
+##
+securePort: 8443
+
+service:
+  type: ClusterIP
+  port: 443
+  ## Specify the nodePort value for the LoadBalancer and NodePort service types.
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
+  ##
+  # nodePort:
+   ## Provide any additional annotations which may be required. This can be used to
+  ## set the LoadBalancer service type to internal only.
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
+  ##
+  annotations: {}
+  # loadBalancerIP:
