--- a/bitnami/tensorflow-inception/values.yaml
+++ b/bitnami/tensorflow-inception/values.yaml
@@ -5,7 +5,7 @@ server:
   image:
     registry: docker.io
     repository: bitnami/tensorflow-serving
-    tag: 1.6.0
+    tag: 1.10.1-debian-9
     ## Specify a imagePullPolicy
     ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
     ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -16,7 +16,7 @@ server:
     ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
     ##
     # pullSecrets:
-    #   - myRegistrKeySecretName 
+    #   - myRegistrKeySecretName
   port: 9000
 
 ## TensorFlow Inception image version
@@ -37,7 +37,7 @@ client:
     ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
     ##
     # pullSecrets:
-    #   - myRegistrKeySecretName 
+    #   - myRegistrKeySecretName
 
 ## Specify a imagePullPolicy
 ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
