--- a/bitnami/tensorflow-inception/templates/svc.yaml
+++ b/bitnami/tensorflow-inception/templates/svc.yaml
@@ -13,4 +13,4 @@ spec:
   - port: {{ .Values.server.port }}
     protocol: TCP
   selector:
-    app: tensorflow-serving
+    app: {{ template "fullname" . }}
